--- a/views/index.html
+++ b/views/index.html
@@ -4,31 +4,44 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Mercado liebre</title>
-
-        <link rel="stylesheet" href="../public/css/style.css">
-        
+        <!----------------link a la hoja de estilos. style.css----------------->
+        <link rel="stylesheet" href="../public/css/index.css">
+        <!----------------link de tipografias------------------------------>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-
+        <!-------------------------link de iconos----------------------------->
         <script src="https://kit.fontawesome.com/0da9a4be3f.js" crossorigin="anonymous"></script>
     </head>
+
         <body>
             <!-------------------HEADER------------------->
             <header>
-              <img src="../public/images/logo-mercado-liebre.svg" alt="Logo mercado liebre" class="logo-header">
-            
-             <div class="barra-busqueda">
-                    <input placeholder="Busca productos, marcas y más..">   
-                  <div class="lupa">
-                     <i class="fa-solid fa-magnifying-glass"></i>
-                  </div>
-             </div>
-
-                <div class="encabezado"> 
-                    <i class="fa-solid fa-hand-holding-dollar" style="margin-right: 1.5px;"></i>
-                    <h2>Comprá en cuotas y sin tarjeta de crédito<h2>
-                </div>    
+                <section class="section-header">
+                    <!--------LOGO MERCADO LIEBRE---->
+                    <figure class="logo-header">
+                        <img src="../public/images/logo-mercado-liebre.svg" alt="Logo mercado liebre">
+                    </figure>
+                    <!---BARRA BUSC. + LUPA----->
+                    <section class="barra-busqueda">
+                        <form action="/buscar" method="POST" class="form-input">
+                            <div class="barra-b">
+                                <input type="text" placeholder="Busca productos, marcas y más.." required class="barra-b">
+                            </div>
+                            <div class="lupa">
+                                <button type="submit" class="button-lupa">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                                </button>
+                            </div>
+                        </form>
+                    </section>   
+                    <!--------ENCABEZADO--------------->
+                    <div class="encabezado"> 
+                        <i class="fa-solid fa-hand-holding-dollar" style="margin-right: 1.5px;"></i>
+                        <h2>Comprá en cuotas y sin tarjeta de crédito<h2>
+                    </div>    
+                </section>
+                <!------------NAV BAR----------------->
                 <nav class="nav">
                     <ul type="none" class="lista">
                         <li>
@@ -43,8 +56,9 @@
                         <li>
                             <a href="#">Ayuda</a>
                         </li>
+                    </ul>
 
-                        <br>
+                    <ul type="none" class="lista">
 
                         <li>
                             <a href="/register"><!--icono de registro-->Creá tu cuenta</a>
@@ -62,25 +76,26 @@
                     </ul>
                     
                 </nav>
-                
+                <!---------MENU BURGUER--------->
                 <div class="burguer-menu">
                   <i class="fa-solid fa-bars"></i>
                 </div>
-                <div>
-                    <img src="../public/images/img-home-banner.jpg" alt="baner de footer" class="baner-header">
-                </div>
-                
-
+                <!------------BANER-------------------->
+                <figure class="baner-header">
+                    <img src="../public/images/img-home-banner.jpg" alt="baner header">
+                </figure>
+            
             </header>
-
+            <!-------------------MAIN------------------->
             <main>
-                <!-----------------------------------------SECTION 1/2-------------------------------------------->            
-                <section>
-                    <divs>
-                        <h2 class="titulares">Basado en tu   última visita</h2>
-                        <article>
-                            <div class="article">
-                                <img src="../public/images/img-cafetera-moulinex.jpg"   alt="Cafetera" width="300px" class="images">
+                <!-------------------------SECTION1--------------------------------->            
+                <section class="section-articulos">
+                    <h2 class="titulares">Basado en tu   última visita</h2>
+                   
+                        <article> 
+                                <figure class="figure-producto">
+                                    <img src="../public/images/img-cafetera-moulinex.jpg"   alt="Cafetera">
+                                </figure>
                                 <div class="detalle-producto">
                                     <div class="truck">
                                         <i class="fa-solid fa-truck"></i>
@@ -89,13 +104,13 @@
                                         <p class="precios">$6.770</p>
                                         <p class="descuentos">40% off</p>
                                     </div>
-                                        <h4 class="descripcion">Cafetera Moulinex</h4>
-                                </div>
-                            </div>    
+                                    <h4 class="descripcion">Cafetera Moulinex</h4>
+                                </div>    
                         </article>    
                         <article>
-                            <div class="article">
-                                <img src="../public/images/img-macbook-pro-2019.jpg" alt="Macbook" width="300px" class="images">
+                                <figure class="figure-producto">
+                                    <img src="../public/images/img-macbook-pro-2019.jpg" alt="Macbook">
+                                </figure>
                                 <div class="detalle-producto">
                                     <div class="truck">
                                         <i class="fa-solid fa-truck"></i>
@@ -105,12 +120,12 @@
                                         <p class="descuentos">20% off</p>
                                     </div>
                                     <h4 class="descripcion">Macbook Pro 2019</h4>
-                                </div>    
-                            </div>
+                                </div>
                         </article>    
                         <article>
-                            <div class="article">
-                                <img src="../public/images/img-samsung-galaxy-s10.jpg" alt="Samsung S10" width="300px" class="images">
+                                <figure class="figure-producto">
+                                    <img src="../public/images/img-samsung-galaxy-s10.jpg" alt="Samsung S10">
+                                </figure>
                                 <div class="detalle-producto">
                                     <div class="truck">
                                         <i class="fa-solid fa-truck"></i>
@@ -120,12 +135,12 @@
                                         <p class="descuentos">10% off</p>
                                     </div>
                                     <h4 class="descripcion">Samsung Galaxy S10</h4>
-                                </div>    
-                            </div>
+                                </div>
                         </article>    
                         <article>
-                            <div class="article">
-                                <img src="../public/images/img-tv-samsung-smart.jpg" alt="Smart TV" width="300px" class="images">
+                                <figure class="figure-producto">
+                                    <img src="../public/images/img-tv-samsung-smart.jpg" alt="Smart TV">
+                                </figure>
                                 <div class="detalle-producto">
                                     <div class="truck">
                                         <i class="fa-solid fa-truck"></i>
@@ -135,20 +150,17 @@
                                         <p class="descuentos">5% off</p>
                                     </div>
                                     <h4 class="descripcion">Smart TV Samsung 43"</h4>
-                                </div>    
-                            </div>
+                                </div>
                         </article>    
-                    </div>    
+                    
                 </section>
-
-                <br>
-                <!----------------------SECTION 2----------------------->
-                <section>
-                    <div>
+                <!---------------SECTION2--------------->
+                <section class="section-articulos">
                         <h2 class="titulares">Ofertas</h2>
                         <article>
-                            <div class="article">
-                                <img src="../public/images/img-cafetera-moulinex.jpg" alt="Cafetera" width="300px" class="images">
+                                <figure class="figure-producto">
+                                    <img src="../public/images/img-cafetera-moulinex.jpg" alt="Cafetera">
+                                </figure>
                                 <div class="detalle-producto">
                                     <div class="truck">
                                         <i class="fa-solid fa-truck"></i>
@@ -158,12 +170,12 @@
                                         <p class="descuentos">40% off</p>
                                     </div>
                                     <h4 class="descripcion">Cafetera   Moulinex</h4>
-                                </div>
-                            </div>    
+                                </div>   
                         </article>
                         <article>
-                            <div class="article">
-                                <img src="../public/images/img-macbook-pro-2019.jpg" alt="Macbook" width="300px" class="images">
+                                <figure class="figure-producto">
+                                    <img src="../public/images/img-macbook-pro-2019.jpg" alt="Macbook">
+                                </figure>
                                 <div class="detalle-producto">
                                     <div class="truck">
                                         <i class="fa-solid fa-truck"></i>
@@ -173,12 +185,12 @@
                                         <p class="descuentos">20% off</p>
                                     </div>
                                     <h4 class="descripcion">Macbook Pro 2019</h4>
-                                </div>    
-                            </div>
+                                </div>
                         </article>
                         <article>
-                            <div class="article">
-                                <img src="../public/images/img-samsung-galaxy-s10.jpg" alt="Samsung S10" width="300px" class="images">
+                                <figure class="figure-producto">
+                                    <img src="../public/images/img-samsung-galaxy-s10.jpg" alt="Samsung S10">
+                                </figure>
                                 <div class="detalle-producto">
                                     <div class="truck">
                                         <i class="fa-solid fa-truck"></i>
@@ -188,12 +200,12 @@
                                         <p class="descuentos">10% off</p>
                                     </div>
                                     <h4 class="descripcion">Samsung Galaxy S10</h4>
-                                </div>    
-                            </div>
+                                </div>
                         </article>
                         <article>
-                            <div class="article">
-                                <img src="../public/images/img-tv-samsung-smart.jpg" alt="Smart TV" width="300px" class="images">
+                                <figure class="figure-producto">
+                                    <img src="../public/images/img-tv-samsung-smart.jpg" alt="Smart TV">
+                                </figure>
                                 <div class="detalle-producto">
                                     <div class="truck">
                                         <i class="fa-solid fa-truck"></i>
@@ -203,51 +215,36 @@
                                         <p class="descuentos">5% off</p>
                                     </div>
                                     <h4 class="descripcion">Smart TV Samsung 43"</h4>
-                                </div>    
-                            </div>
-                        </article>    
-                    </div>
+                                </div>
+                        </article>
                 </section>        
             </main>
-            <br>
-            <br>
-            <!----------------FOOTER---------------------->
+            <!----------------FOOTER------------------->
             <footer>
-            <ul type="none" class="lista-footer">
-                <li>
-                    <div class="icono-footer">
-                    <i class="fa-solid fa-credit-card"></i>
-                    </div>
-
-                    <h3 class="titulares">Pagá con tarjeta o en efectivo</h3>
-
-                    <p class="textos">Con Mercado Liebre Cash, tenés cuaotas sin<br>interés con tarjeta o efectivo en puntos de<br> pago.¡Y siempre es seguro!</p>
-                </li>
-                <br>
-                <li>
-                    <div class="icono-footer">
-                    <i class="fa-solid fa-gift"></i>
-                    </div>
-
-                    <h3 class="titulares">Envío gratis desde los $2.500</h3>
-
-                    <p class="textos">Solo por estar registrado en Mercado Liebre<br>tenés envíos gratis en miles de productos. Es<br>un beneficio de Mercado Puntos.</p>
-                </li>
-                <br>
-                <li>
-                    <div class="icono-footer">
-                    <i class="fa-solid fa-user-shield"></i>
-                    </div>
-
-                    <h3 class="titulares">Seguridad de princio a fin.</h3>
-
-                    <p class="textos">¿No te gusta?¡Devolvelo! En MercadoLiebre<br>no hay nada que no puedas hacer porque estás<br>simpre protegid@</p>
-                </li>
-                <br>
-                <li>
-                    <h3 class="textos">Copyright C 1999-2020 MercadoLiebre S.R.L</h3>
-                </li>
-            </ul>
+                <ul type="none" class="pie-de-pagina">
+                    <li class="li-footer">
+                        <div class="icono-footer">
+                        <i class="fa-solid fa-credit-card"></i>
+                        </div>
+                        <h3 class="titulares-footer">Pagá con tarjeta o en efectivo</h3>
+                        <p class="textos">Con Mercado Liebre Cash, tenés cuaotas sin<br>interés con tarjeta o efectivo en puntos de<br> pago.¡Y siempre es seguro!</p>
+                    </li>
+                    <li class="li-footer">
+                        <div class="icono-footer">
+                        <i class="fa-solid fa-gift"></i>
+                        </div>
+                        <h3 class="titulares-footer">Envío gratis desde los $2.500</h3>
+                        <p class="textos">Solo por estar registrado en Mercado Liebre<br>tenés envíos gratis en miles de productos. Es<br>un beneficio de Mercado Puntos.</p>
+                    </li>
+                    <li class="li-footer">
+                        <div class="icono-footer">
+                        <i class="fa-solid fa-user-shield"></i>
+                        </div>
+                        <h3 class="titulares-footer">Seguridad de princio a fin.</h3>
+                        <p class="textos">¿No te gusta?¡Devolvelo! En MercadoLiebre<br>no hay nada que no puedas hacer porque estás<br>simpre protegid@</p>
+                    </li>
+                </ul>
+                <p id="textos">Copyright C 1999-2020 MercadoLiebre S.R.L</p>
             </footer>
         </body>
 </html>
